# Robot-Programming-Project

./: README.md
rp_gazebo_worlds/: CMakeLists.txt  package.xml
rp_results/PRM/: link_video_real_velocity.txt
rp_results/RRT/: [RP]RRT_Planner(Real Velocity).mkv
rp_results/SBLK/: [RP] SBLK_Planner(Real Velocity).mkv
rp_tiago_gazebo/: CMakeLists.txt  package.xml
rp_tiago_gazebo/launch/: tiago_gazebo.launch
tiago_arm_controller/: CMakeLists.txt  package.xml
tiago_arm_controller/src/: tiago_ik.cpp
tiago_base_controller/: CMakeLists.txt  package.xml
tiago_base_controller/launch/: tiago_base_controller.launch
tiago_base_controller/scripts/: tiago_base_script.cpp
tiago_base_controller/src/: base_controller.cpp  quaternion.h  tangent_point.h
