<?xml version="1.0"?>
<package format="2">
  <name>rp_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The gazebo_worlds package</description>
  <maintainer email="lorenzo.cirone00@gmail.com">Lorenzo Cirone</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
